# partitionfinder

./: .figleaf  .gitignore  .gitmodules  BUGS.txt  CHANGES.txt  LICENSE  Makefile  NOTES.txt  PartitionFinder.py  PartitionFinderMorphology.py  PartitionFinderProtein.py  README.md  README.txt  TESTS.txt  TODO.txt  archy_mb.txt  archy_mb.txt~  build-programs.sh  build_ext.py  build_programs.sh  bump-release.sh  clean-tests.sh  fasta.py  gui_logging.py  how-to-compile-universal-phyml.txt  index.html  logging.cfg  makeapp.sh  mat.nex  memorytest.py  parser.py  partition_finder.cfg  partition_finder.cfg~  pf.py  pfgui.py  quick_tests.sh  quicktests.sh  randint.py  randint.py~  runtests.sh  (+12 more)
Resources/: blob.tiff  blob_app.icns  blob_file.icns  pf.icns  pf512.ai
docs/: .Rapp.history  .Rhistory  A quick guide to using PartitionFinder.doc  Figure1.pptx  MANUAL.md  Manual.doc  Manual_v2.0.0.docx  Manual_v2.1.x.docx  PartitionFinder2_Manual.docx  PartitionFinder2的一般使用方法（中文版-网页版）.html  PartitionFinder_Manual.docx  PartitionFinder_Manual_v1.0.1.docx  PartitionFinder_Manual_v1.1.0.docx  README.md  downloadplot.r  downloadstats.csv  evoldir_annoucement_1.txt  evoldir_annoucement_2.txt  googlegroup_analysis.r  googlegroup_stats.csv  tiger_compilation.txt  ~$nual_v2.0.0.docx
example/: partition_finder.cfg  test.fas  test.phy  test_difficult_partition_file  test_schemes2  tree.phy
examples/: README.txt
examples/aminoacid/: Als_etal_2004.phy  partition_finder.cfg
examples/kmeans/: partition_finder.cfg  supp9_nuc.phy  test.phy
examples/morphology/: mat.nex  partition_finder.cfg  test.phy
examples/nucleotide/: partition_finder.cfg
examples/simulated_data/: 32_sim_TRUE.phy  partition_finder.cfg
helper_scripts/: converter.py
morph/: archy_rax.txt  partition_finder.cfg
newx/: TableParse.py  autobind.py  cmd.py  curry.py  drawing.py  easy.py  events.py  idfree.py  images.py  layout.py  listctrl.py  log.py  loggui.py  matplot.py  menu.py  naming.py  optionset.py  persist.py  policy.py  shellpanel.py  split.py  toolbar.py  util.py  vlist.py
partfinder/: __init__.py  _tiger.cpp  _tiger.pxd  _tiger.pyx  algorithm.py  algorithm.py~  alignment.py  alignment.py~  analysis.py  analysis_method.py  cluster.py  config.py  configuration.py  database.py  dependencies.py  entropy.py  fasta.py  fasttree.py  kmeans.py  logtools.py  main.py  main.py~  mgparse.py  model_loader.py  model_utils.py  modelgen.py  models.csv  models.py  morph_tiger.py  neighbour.py  new_subset.py  options.py  parser.py  partition.py  partition_scheme.py  phyml.py  phyml_models.py  process_numerical_description.py  processing.py  progress.py  (+17 more)
partition_finder/: MinimalSubsets.py  Scheme.py  Subset.py  alignIO.py  configuration.py  file_parsers.py  run_modelselection.py  submodels.py
partition_finder/testfiles/: test_partitions  test_schemes1
programs/: BUILDING.txt  README.md  fast_TIGER  format.latex  how-to-compile-universal-phyml.txt  phyml  phyml_64bit  raxml  raxml.linux  raxmlHPC-PTHREADS-SSE37.3.9  raxmlHPC-PTHREADS-SSE3RML  raxmlHPC-SSE3  raxml_pthreads  raxml_pthreads.linux  raxml_rob_SSE3_gcc  raxml_rob_gcc  raxml_simple
programs/phyml/: config.h  wscript
programs/phyml-read-only/: Makefile  config.h  config.h.in  config.status  configure  configure.ac  confrf  wscript
programs/phyml-read-only/.svn/: all-wcprops  entries
programs/phyml-read-only/.svn/text-base/: README.svn-base  configure.ac.svn-base  phyml_package.pl.svn-base
programs/phyml-read-only/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
programs/phyml-read-only/doc/: phyml-manual.tex
programs/phyml-read-only/doc/.svn/: all-wcprops  entries
programs/phyml-read-only/doc/.svn/text-base/: phyml_manual.tex.svn-base
programs/phyml-read-only/examples/.svn/: all-wcprops  entries
programs/phyml-read-only/src/: Makefile  Makefile.in  alrt.c  bionj.c  bionj.h  cl.h  draw.h  eigen.h  free.h  help.h  interface.c  interface.h  lk.h  m4.h  main.c  mcmc.h  models.c  models.h  mpi_boot.h  optimiz.h  pars.c  phyml_i386  phyml_ppc  phyml_universal  phyml_x86_64  rates.c  rwrapper.h  simu.c  simu.h  stats.c  stats.h  times.c  times.h  tiporder.c  tiporder.h  utilities.c
programs/phyml-read-only/src/.deps/: alrt.Po  bionj.Po  cl.Po  draw.Po  eigen.Po  free.Po  help.Po  interface.Po  lk.Po  m4.Po  main.Po  mcmc.Po  mg.Po  models.Po  mpi_boot.Po  optimiz.Po  pars.Po  rates.Po  simu.Po  spr.Po  stats.Po  times.Po  tiporder.Po  utilities.Po
programs/phyml-read-only/src/.svn/: all-wcprops  entries
programs/phyml-read-only/src/.svn/text-base/: Makefile.am.svn-base  alrt.c.svn-base  alrt.h.svn-base  cl.c.svn-base  draw.c.svn-base  draw.h.svn-base  free.c.svn-base  help.c.svn-base  lk.c.svn-base  m4.c.svn-base  mcmc.c.svn-base  mg.c.svn-base  mg.h.svn-base  models.c.svn-base  models.h.svn-base  mpi_boot.c.svn-base  optimiz.c.svn-base  optimiz.h.svn-base  pars.h.svn-base  rates.h.svn-base  rwrapper.c.svn-base  rwrapper.h.svn-base  simu.c.svn-base  simu.h.svn-base  spr.c.svn-base  spr.h.svn-base  stats.h.svn-base  times.c.svn-base  utilities.c.svn-base  utilities.h.svn-base
programs/phyml_source/: Makefile.am  Makefile.in  configure  wscript
tests/: .figleaf  basetest.py  part1.phy  setup_tests.py  start_tree_correct.phy  test.fas_modelgenerator.out  test_alignment.py  test_analysis.py  test_combinations  test_datatype.py  test_datatype.py~  test_full_analysis.py  test_options.py  test_parser.py  test_partition.py  test_partitions2  test_phyml.py  test_quick_analysis.py  test_raxml.py  test_rescaling.py  test_searches.py  test_submodels.py  test_subset.py  test_tiger.py  tree.phy
tests/PF2/: test_pf2.py
tests/all_succeed/: test_all_success.py
tests/cfg/: test03.cfg  test04.cfg  test05.cfg  test06.cfg  test07.cfg  test08.cfg  test09.cfg  test1.cfg  test10.cfg  test11.cfg  test12.cfg  test13.cfg  test14.cfg  test15.cfg  test16.cfg  test3.cfg  test4.cfg  test5.cfg  test6.cfg  test7.cfg  test8.cfg  test9.cfg  test_configs.py
tests/christof/: README  TODO  run-tests.pl  (+2 more)
timings/: array_lookups.py  numpy_vs_set.py
(+223 files in other folders)
